--- a/lonelyTwitterTests/AndroidManifest.xml
+++ b/lonelyTwitterTests/AndroidManifest.xml
@@ -14,4 +14,6 @@
         <uses-library android:name="android.test.runner" />
     </application>
 
+    
+    <uses-sdk android:minSdkVersion="8"/>
 </manifest>
